--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Home - ildarovfuad</title>
+  <title>Projects - ildarovfuad</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -26,10 +26,16 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-
+  <!-- =======================================================
+  * Template Name: Personal
+  * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
+  * Updated: Mar 05 2025 with Bootstrap v5.3.3
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
 </head>
 
-<body class="index-page">
+<body class="projects-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
@@ -42,10 +48,10 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="resume.html">Resume</a></li>
-          <li class="dropdown"><a href="javascript:void(0)"><span>Portfolio</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="javascript:void(0)" class="active"><span>Portfolio</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="experience.html">Experience</a></li>
               <li><a href="certifications.html">Certifications</a></li>
@@ -55,7 +61,7 @@
                   <li><a href="/etudes/msc.html">Master of Science</a></li>
                 </ul>
               </li>
-              <li><a href="projects.html">Projects</a></li>
+              <li><a href="projects.html" class="active">Projects</a></li>
             </ul>
           </li>
           <li><a href="contact.html">Contact</a></li>
@@ -68,20 +74,92 @@
 
   <main class="main">
 
-    <!-- Hero Section -->
-    <section id="hero" class="hero section dark-background">
+    <!-- Page Title -->
+    <div class="page-title" data-aos="fade">
+      <div class="heading">
+        <div class="container">
+          <div class="row d-flex justify-content-center text-center">
+            <div class="col-lg-8">
+              <h1>Projects</h1>
+              <p class="mb-0">
+                This section is dedicated to showcasing a selection of my academic and personal projects, reflecting my skills, interests, and development . Each project highlights practical applications of theoretical knowledge, demonstrating problem-solving abilities, technical proficiency, and a commitment to continuous learning. These works represent my evolving experience in engineering, data analysis, and interdisciplinary collaboration.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <nav class="breadcrumbs">
+        <div class="container">
+          <ol>
+            <li><a href="index.html">Home</a></li>
+            <li class="current">Projects</li>
+          </ol>
+        </div>
+      </nav>
+    </div><!-- End Page Title -->
 
-      <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in">
+    <!-- projects Section -->
+    <section id="projects" class="projects section">
 
-      <div class="container" data-aos="zoom-out" data-aos-delay="100">
-        <h2>Fuad Ildarov</h2>
-        <p>I'm <span class="typed" data-typed-items="Geologist, Geophysicist, Geoscientist, Researcher, Engineer, Physicist, Cyclist, Footballer"></span><span class="typed-cursor typed-cursor--blink"></span></p>
-        
+      <div class="container">
+
+        <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
+
+          <ul class="projects-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
+            <li data-filter="*" class="filter-active">All</li>
+            <li data-filter=".filter-web">Web</li>
+            <li data-filter=".filter-ufaz">UFAZ</li>
+            <li data-filter=".filter-personal">Personal</li>
+          </ul><!-- End projects Filters -->
+
+          <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+
+            <div class="col-lg-4 col-md-6 projects-item isotope-item filter-web">
+              <div class="projects-content h-100">
+                <img  src="/assets/img/projects/gpac.png" class="img-fluid" alt="">
+                <div class="projects-info">
+                  <h4>gPAC</h4>
+                  <p>grade analysing tool for students</p>
+                  <a href="/assets/img/projects/gpac.png" title="gPAC" data-gallery="projects-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="projects-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End projects Item -->
+
+            <div class="col-lg-4 col-md-6 projects-item isotope-item filter-ufaz">
+              <div class="projects-content h-100">
+                <img src="assets/img/projects/projects-10.webp" class="img-fluid" alt="">
+                <div class="projects-info">
+                  <h4>Product 1</h4>
+                  <p>Lorem ipsum, dolor sit amet consectetur</p>
+                  <a href="assets/img/projects/projects-10.webp" title="Product 1" data-gallery="projects-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="projects-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End projects Item -->
+
+            <div class="col-lg-4 col-md-6 projects-item isotope-item filter-personal">
+              <div class="projects-content h-100">
+                <img src="assets/img/projects/projects-7.webp" class="img-fluid" alt="">
+                <div class="projects-info">
+                  <h4>Branding 1</h4>
+                  <p>Lorem ipsum, dolor sit amet consectetur</p>
+                  <a href="assets/img/projects/projects-7.webp" title="Branding 1" data-gallery="projects-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="projects-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End projects Item -->
+
+          </div><!-- End projects Container -->
+
+        </div>
+
       </div>
 
-    </section><!-- /Hero Section -->
+    </section><!-- /projects Section -->
 
   </main>
+
 
   <footer id="footer" class="footer dark-background" style="border-top: 1px solid #18d26e;">
     <div class="container">
