--- a/starter-page.html
+++ b/starter-page.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Home - ildarovfuad</title>
+  <title>Starter Page - Personal Bootstrap Template</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -26,10 +26,16 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-
+  <!-- =======================================================
+  * Template Name: Personal
+  * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
+  * Updated: Mar 05 2025 with Bootstrap v5.3.3
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
 </head>
 
-<body class="index-page">
+<body class="starter-page-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
@@ -42,20 +48,26 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="resume.html">Resume</a></li>
-          <li class="dropdown"><a href="javascript:void(0)"><span>Portfolio</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="experience.html">Experience</a></li>
-              <li><a href="certifications.html">Certifications</a></li>
-              <li class="dropdown"><a href="javascript:void(0)"><span>Education</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <li><a href="#">Dropdown 1</a></li>
+              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="/etudes/bsc.html">Bachelor of Science</a></li>
-                  <li><a href="/etudes/msc.html">Master of Science</a></li>
+                  <li><a href="#">Deep Dropdown 1</a></li>
+                  <li><a href="#">Deep Dropdown 2</a></li>
+                  <li><a href="#">Deep Dropdown 3</a></li>
+                  <li><a href="#">Deep Dropdown 4</a></li>
+                  <li><a href="#">Deep Dropdown 5</a></li>
                 </ul>
               </li>
-              <li><a href="projects.html">Projects</a></li>
+              <li><a href="#">Dropdown 2</a></li>
+              <li><a href="#">Dropdown 3</a></li>
+              <li><a href="#">Dropdown 4</a></li>
             </ul>
           </li>
           <li><a href="contact.html">Contact</a></li>
@@ -68,20 +80,45 @@
 
   <main class="main">
 
-    <!-- Hero Section -->
-    <section id="hero" class="hero section dark-background">
+    <!-- Page Title -->
+    <div class="page-title" data-aos="fade">
+      <div class="heading">
+        <div class="container">
+          <div class="row d-flex justify-content-center text-center">
+            <div class="col-lg-8">
+              <h1>Starter Page</h1>
+              <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <nav class="breadcrumbs">
+        <div class="container">
+          <ol>
+            <li><a href="index.html">Home</a></li>
+            <li class="current">Starter Page</li>
+          </ol>
+        </div>
+      </nav>
+    </div><!-- End Page Title -->
 
-      <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in">
+    <!-- Starter Section Section -->
+    <section id="starter-section" class="starter-section section">
 
-      <div class="container" data-aos="zoom-out" data-aos-delay="100">
-        <h2>Fuad Ildarov</h2>
-        <p>I'm <span class="typed" data-typed-items="Geologist, Geophysicist, Geoscientist, Researcher, Engineer, Physicist, Cyclist, Footballer"></span><span class="typed-cursor typed-cursor--blink"></span></p>
-        
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Starter Section</h2>
+        <div><span>Check Our</span> <span class="description-title">Starter Section</span></div>
+      </div><!-- End Section Title -->
+
+      <div class="container" data-aos="fade-up">
+        <p>Use this page as a starter for your own custom pages.</p>
       </div>
 
-    </section><!-- /Hero Section -->
+    </section><!-- /Starter Section Section -->
 
   </main>
+
 
   <footer id="footer" class="footer dark-background" style="border-top: 1px solid #18d26e;">
     <div class="container">
